Fixed sub-nav scroll height on tablet/mobile

--- a/app/components/sub-nav/style.scss
+++ b/app/components/sub-nav/style.scss
@@ -104,6 +104,7 @@ $animation-time: $nav-animation-time;
 
 #sub-nav-scroller {
   width:100%;
+  height:100vh;
 }
 
 #sub-nav-touch-blocker {
